--- a/DTUSensingApp/Base.lproj/Main.storyboard
+++ b/DTUSensingApp/Base.lproj/Main.storyboard
@@ -25,11 +25,11 @@
                                         <rect key="frame" x="0.0" y="92" width="375" height="48"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Bgj-6F-Oyj" id="Wrw-Tg-8v8">
-                                            <frame key="frameInset" width="375" height="47.5"/>
+                                            <frame key="frameInset" width="375" height="47"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7nR-Mb-p6q">
-                                                    <frame key="frameInset" minX="15" width="345" height="47.5"/>
+                                                    <frame key="frameInset" minX="15" width="345" height="47"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -127,11 +127,74 @@
                     </view>
                     <connections>
                         <outlet property="tableView" destination="3Fm-wD-YHR" id="9oy-hN-nB3"/>
+                        <segue destination="sse-8G-TJ4" kind="show" identifier="detailListSegue" id="HRL-06-VZ3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FbT-xb-bOi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1216.8" y="15.742128935532236"/>
+        </scene>
+        <!--Detail List View Controller-->
+        <scene sceneID="NP3-i7-zoc">
+            <objects>
+                <viewController id="sse-8G-TJ4" customClass="DetailListViewController" customModule="DTUSensingApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3zV-cD-4TC"/>
+                        <viewControllerLayoutGuide type="bottom" id="0Vq-Nz-0sy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ipK-Xh-UGj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SYb-ff-G4R">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DetailLabelWithTitle" textLabel="nlI-IA-RiI" detailTextLabel="89f-Ul-dJb" style="IBUITableViewCellStyleValue1" id="3pE-a9-3cS" customClass="DetailLabelWithTitleTableViewCell" customModule="DTUSensingApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3pE-a9-3cS" id="ziI-co-odc">
+                                            <frame key="frameInset" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nlI-IA-RiI">
+                                                    <frame key="frameInset" minX="15" minY="11" width="34" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="89f-Ul-dJb">
+                                                    <frame key="frameInset" minX="316" minY="11" width="44" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="sse-8G-TJ4" id="xTQ-yR-NaU"/>
+                                    <outlet property="delegate" destination="sse-8G-TJ4" id="Eyh-BO-huv"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="SYb-ff-G4R" firstAttribute="leading" secondItem="ipK-Xh-UGj" secondAttribute="leading" id="5Vy-iP-pnc"/>
+                            <constraint firstItem="SYb-ff-G4R" firstAttribute="top" secondItem="ipK-Xh-UGj" secondAttribute="top" id="UwN-co-gCk"/>
+                            <constraint firstItem="0Vq-Nz-0sy" firstAttribute="top" secondItem="SYb-ff-G4R" secondAttribute="bottom" id="eS9-4X-LnE"/>
+                            <constraint firstAttribute="trailing" secondItem="SYb-ff-G4R" secondAttribute="trailing" id="l9J-eh-DMa"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="SYb-ff-G4R" id="77Y-pw-0bK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q4h-lJ-kF0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1952.8" y="15.742128935532236"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pGg-yV-fi0">
